...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardUseCompatPadding="true"
    >

    <RelativeLayout
        android:id="@+id/get_started_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="7dp">

        <TextView
            android:id="@+id/Item_category_name"
...
